--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lodash": "^4.17.15",
     "react": "16.9.0",
     "react-native": "0.61.2",
-    "react-native-router-flux": "^4.0.6"
+    "react-native-router-flux": "^4.0.6",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
